feat: 完成所有模块的无刷新升级

--- a/oes-core/src/main/resources/templates/teacher/include/header.html
+++ b/oes-core/src/main/resources/templates/teacher/include/header.html
@@ -5,7 +5,7 @@
             <a class="nav-link" data-widget="pushmenu" href="#"><i class="fa fa-bars"></i></a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-            <a href="/teacher/home/${session.teacherId}" class="nav-link">首页</a>
+            <a href="/teacher/home" class="nav-link">首页</a>
         </li>
     </ul>
 
@@ -13,7 +13,7 @@
         <!-- User Account: style can be found in dropdown.less -->
         <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown" href="#">
-                <i class="fa fa-gear"></i>
+                <i class="fas fa-tools"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
                 <!-- Message Start -->
@@ -26,7 +26,7 @@
                 </div>
                 <!-- Message End -->
                 <div class="dropdown-divider"></div>
-                <a href="/teacher/update/pass" class="dropdown-item">
+                <a href="#" id="update-pass" class="dropdown-item">
                     <!-- Message Start -->
                     <div class="media">
                         <div class="media-body text-center">
