--- a/oes-core/src/main/resources/templates/teacher/include/sider.html
+++ b/oes-core/src/main/resources/templates/teacher/include/sider.html
@@ -99,7 +99,7 @@
 
                 <!-- 帮助中心 -->
                 <li class="nav-item">
-                    <a href="/teacher/help" class="nav-link  ${name == 'help'?'active':''}">
+                    <a href="javascript:;" id="help" class="nav-link  ${name == 'help'?'active':''}">
                         <i class="nav-icon fas fa-user-circle"></i>
                         <p>帮助中心</p>
                     </a>
