--- a/oes-core/src/main/resources/templates/teacher/self/help.html
+++ b/oes-core/src/main/resources/templates/teacher/self/help.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 教师帮助中心</title>
-    <!-- css style -->
-    <%include("../../include/css.html"){}%>
+    <title>OES | 教师端</title>
+    <!-- 引入全局 css 文件 -->
+    <%include("../../include/css.html"){} %>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
-    <!-- 顶部导航栏部分 -->
-    <%include("../include/header.html"){} %>
+    <!-- 引入头部 -->
+    <% include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%layout("../include/sider.html",{name:"help"}){}%>
+    <% layout("../include/sider.html",{name:"help"}){} %>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
+        <%
+        #ajax helpTable:{
+        %>
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <div class="container-fluid">
@@ -92,15 +97,15 @@
                 </div>
             </div>
         </section>
+        <%}%>
     </div>
-    <!-- 引入footer -->
-    <%include("../../include/footer.html"){}%>
-    <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
         <!-- Control sidebar content goes here -->
     </aside>
+    <!-- 引入footer -->
+    <% include("../../include/footer.html"){}%>
+    <%include("../main/api.html"){}%>
+    <!-- Control Sidebar -->
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<%include("../../include/js.html"){}%>
 </body>
 </html>
