--- a/oes-core/src/main/resources/templates/teacher/self/update-pass.html
+++ b/oes-core/src/main/resources/templates/teacher/self/update-pass.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 个人中心</title>
-    <!-- css style -->
-    <%include("../../include/css.html"){}%>
+    <title>OES | 教师端</title>
+    <!-- 引入全局 css 文件 -->
+    <%include("../../include/css.html"){} %>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
-    <!-- 顶部导航栏部分 -->
-    <%include("../../teacher/include/header.html"){} %>
+    <!-- 引入头部 -->
+    <% include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%layout("../../teacher/include/sider.html",{name:"update-pass"}){}%>
-
-    <!-- Content Wrapper. Contains page content -->
+    <% layout("../include/sider.html",{name:"update-pass"}){} %>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
+    <!-- 右侧内容部分 -->
     <div class="content-wrapper">
+        <%
+        #ajax updateTable:{
+        %>
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <div class="container-fluid">
@@ -99,15 +103,17 @@
                 <!-- /.row -->
             </div><!-- /.container-fluid -->
         </section>
-        <!-- /.content -->
+        <!-- 接口 -->】
+        <% include("api.html"){} %>
+        <%}%>
     </div>
+    <aside class="control-sidebar control-sidebar-dark">
+        <!-- Control sidebar content goes here -->
+    </aside>
     <!-- 引入footer -->
-    <%include("../../include/footer.html"){}%>
+    <% include("../../include/footer.html"){}%>
+    <%include("../main/api.html"){}%>
+    <!-- Control Sidebar -->
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<%include("../../include/js.html"){}%>
-<script src="/static/js/OesUtil.js"></script>
-<!-- 接口 -->】
-<% include("api.html"){} %>
 </body>
 </html>
