pref: 增加 APM 服务监控子系统 / 优化配置与代码

--- a/oes-core/src/main/resources/templates/admin/self/home.html
+++ b/oes-core/src/main/resources/templates/admin/self/home.html
@@ -41,7 +41,7 @@
                     <div class="col-12">
                         <div class="callout callout-info">
                             <h5><i class="fa fa-info"></i>&nbsp;${session.admin.name}管理员，你好：</h5>
-                            欢迎使用 On-line Examination System 在线考试系统
+                            欢迎使用OES在线考试软件
                         </div>
                         <!-- Main content -->
                         <div class="invoice p-3 mb-3">
