--- a/oes-core/src/main/resources/templates/auth/login.html
+++ b/oes-core/src/main/resources/templates/auth/login.html
@@ -19,7 +19,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
     <div class="login-logo">
-        <a href="#"><b>OES</b>在线考试系统</a>
+        <a href="#"><b>OES</b>在线考试软件</a>
     </div>
     <!-- /.login-logo -->
     <div class="card">
