pref: 系统业务优化 / 修复多处 bug

--- a/oes-core/src/main/resources/templates/teacher/major/update-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/major/update-modal.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="table">
                         <label for="academy">所属学院</label>
-                        <select id="academy" name="academy" style="width: 100%" class="academyId academySelect">
+                        <select id="academy" name="academyId" style="width: 100%" class="academyId academySelect">
                             <option value="">请选择</option>
                             <!-- 数据填充 -->
                         </select>
