--- a/oes-core/src/main/resources/templates/teacher/paper/import-paper.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/import-paper.html
@@ -154,7 +154,7 @@
                                             <label for="aDif">难度</label>
                                             <select id="aDif" name="aDif" class="form-control">
                                                 <option value="0" selected>平均</option>
-                                                <option value="1">简答</option>
+                                                <option value="1">简单</option>
                                                 <option value="2">一般</option>
                                                 <option value="3">困难</option>
                                             </select>
@@ -182,7 +182,7 @@
                                             <label for="bDif">难度</label>
                                             <select id="bDif" name="bDif" class="form-control">
                                                 <option value="0" selected>平均</option>
-                                                <option value="1">简答</option>
+                                                <option value="1">简单</option>
                                                 <option value="2">一般</option>
                                                 <option value="3">困难</option>
                                             </select>
@@ -210,7 +210,7 @@
                                             <label for="cDif">难度</label>
                                             <select id="cDif" name="cDif" class="form-control">
                                                 <option value="0" selected>平均</option>
-                                                <option value="1">简答</option>
+                                                <option value="1">简单</option>
                                                 <option value="2">一般</option>
                                                 <option value="3">困难</option>
                                             </select>
@@ -238,7 +238,7 @@
                                             <label for="dDif">难度</label>
                                             <select id="dDif" name="dDif" class="form-control">
                                                 <option value="0" selected>平均</option>
-                                                <option value="1">简答</option>
+                                                <option value="1">简单</option>
                                                 <option value="2">一般</option>
                                                 <option value="3">困难</option>
                                             </select>
@@ -266,7 +266,7 @@
                                             <label for="eDif">难度</label>
                                             <select id="eDif" name="eDif" class="form-control">
                                                 <option value="0" selected>平均</option>
-                                                <option value="1">简答</option>
+                                                <option value="1">简单</option>
                                                 <option value="2">一般</option>
                                                 <option value="3">困难</option>
                                             </select>
@@ -294,7 +294,7 @@
                                             <label for="fDif">难度</label>
                                             <select id="fDif" name="fDif" class="form-control">
                                                 <option value="0" selected>平均</option>
-                                                <option value="1">简答</option>
+                                                <option value="1">简单</option>
                                                 <option value="2">一般</option>
                                                 <option value="3">困难</option>
                                             </select>
