--- a/oes-core/src/main/resources/templates/teacher/question/api.html
+++ b/oes-core/src/main/resources/templates/teacher/question/api.html
@@ -1,232 +1,233 @@
 <script>
 
-    // 操作按钮行为
-    function operateFormatter(value, row, index) {
-        return [' <button onclick="goView(' + row.id + ')" class="btn btn-primary btn-sm">查看 </button>&nbsp;' +
-        '<button onclick="goUpdate(' + row.id + ')" class="btn btn-warning btn-sm"> 编辑 </button>&nbsp;' +
-        '<button onclick="deleteQuestion(' + row.id + ')" class="btn btn-danger btn-sm">删除</button>']
-            .join('');
-    }
+  // 操作按钮行为
+  function operateFormatter(value, row, index) {
+    return [' <button onclick="goView(' + row.id
+    + ')" class="btn btn-primary btn-sm">查看 </button>&nbsp;' +
+    '<button onclick="goUpdate(' + row.id + ')" class="btn btn-warning btn-sm"> 编辑 </button>&nbsp;'
+    +
+    '<button onclick="deleteQuestion(' + row.id + ')" class="btn btn-danger btn-sm">删除</button>']
+    .join('');
+  }
 
-    function typeFormatter(value, row, index) {
-        switch (row.typeId) {
-            case (1) :
-                return "单选题";
-            case (2) :
-                return "多选题";
-            case (3) :
-                return "判断题";
-            case (4) :
-                return "填空题";
-            case (5) :
-                return "简答题";
-            case (6) :
-                return "编程题";
+  function typeFormatter(value, row, index) {
+    switch (row.typeId) {
+      case (1) :
+        return "单选题";
+      case (2) :
+        return "多选题";
+      case (3) :
+        return "判断题";
+      case (4) :
+        return "填空题";
+      case (5) :
+        return "简答题";
+      case (6) :
+        return "编程题";
+    }
+  }
+
+  // 模糊搜索参数
+  function params(params) {
+    return {
+      current: params.pageNumber,
+      size: params.pageSize,
+      typeId: $('#findType').val(),
+      courseId: $("#findCourse").val(),
+      questionName: $("#findQuestionName").val()
+    };
+  }
+
+  // 初始化表单
+  OesUtil.initQueryTable('#questionInfo', "/api/question/list", "get", [{
+        title: '序号',
+        field: 'id',
+        sortable: false,
+        formatter: function (value, row, index) {
+          return index + 1;
         }
-    }
+      }, {
+        title: '題目名称',
+        field: 'questionName',
+        sortable: false
+      }, {
+        title: '类型',
+        field: 'type',
+        sortable: false,
+        formatter: typeFormatter
+      }, {
+        field: 'operate',
+        title: '操作',
+        formatter: operateFormatter
+      }],
+      params
+  );
 
-    // 模糊搜索参数
-    function params(params) {
-        return {
-            current: params.pageNumber,
-            size: params.pageSize,
-            typeId: $('#findType').val(),
-            courseId: $("#findCourse").val(),
-            questionName: $("#findQuestionName").val()
-        };
-    }
+  // 分类型搜索
+  $("#findType").change(function () {
+    OesUtil.refreshTable('#questionInfo');
+  });
 
-    // 初始化表单
-    OesUtil.initQueryTable('#questionInfo', "/api/question/list", "get", [{
-            title: '序号',
-            field: 'id',
-            sortable: false,
-            formatter: function (value, row, index) {
-                return index + 1;
-            }
-        }, {
-            title: '題目名称',
-            field: 'questionName',
-            sortable: false
-        }, {
-            title: '类型',
-            field: 'type',
-            sortable: false,
-            formatter: typeFormatter
-        }, {
-            field: 'operate',
-            title: '操作',
-            formatter: operateFormatter
-        }],
-        params
-    );
+  // 分课程
+  $("#findCourse").change(function () {
+    OesUtil.refreshTable('#questionInfo');
+  });
 
-    // 分类型搜索
-    $("#findType").change(function () {
-        OesUtil.refreshTable('#questionInfo');
+  // 题目名称模糊搜索
+  OesUtil.bindRequest('#findQuestionName', '#questionInfo', 200);
+
+  // 启动查看模态框
+  function goView(id) {
+    $("#view-modal").modal({
+      show: true,
+      backdrop: 'static'
+    });
+    $.get("/api/question/" + id, function (data) {
+      $(".id").val(data.id);
+      $(".questionName").val(data.questionName);
+      $(".answer").val(data.answer);
+      $(".course").val(data.course.courseName);
+      $(".teacherName").val(data.course.teacher.name);
+      $(".remark").val(data.remark);
+    })
+  }
+
+  // 打开更新题目模态框
+  function goUpdate(id) {
+    $.get("/api/question/" + id, function (data) {
+      // 填充基本信息
+      $("#questionName").val(data.questionName);
+      $("#answer").val(data.answer);
+      $("#difficulty").val(data.difficulty).select2({width: "100%", theme: 'bootstrap4'});
+      $("#optionA").val(data.optionA);
+      $("#optionB").val(data.optionB);
+      $("#optionC").val(data.optionC);
+      $("#optionD").val(data.optionD);
+      $("#remark").val(data.remark);
+      $("#id").val(data.id);
+      $("#typeId").val(data.type.id).select2({width: "100%", theme: 'bootstrap4'});
+      $("#courseName").val(data.course.courseName);
     });
 
-    // 分课程
-    $("#findCourse").change(function () {
-        OesUtil.refreshTable('#questionInfo');
+    // 打开模态框
+    $("#update-modal").modal({
+      show: true,
+      backdrop: 'static'
     });
+  }
 
-    // 题目名称模糊搜索
-    OesUtil.bindRequest('#findQuestionName', '#questionInfo', 200);
-
-
-
-    // 启动查看模态框
-    function goView(id) {
-        $("#view-modal").modal({
-            show: true,
-            backdrop: 'static'
-        });
-        $.get("/api/question/" + id, function (data) {
-            $(".questionName").val(data.questionName);
-            $(".answer").val(data.answer);
-            $(".course").val(data.course.courseName);
-            $(".teacherName").val(data.course.teacher.name);
-            $(".remark").val(data.remark);
-        })
-    }
-
-    // 打开更新题目模态框
-    function goUpdate(id) {
-        $.get("/api/question/" + id, function (data) {
-            // 填充基本信息
-            $("#questionName").val(data.questionName);
-            $("#answer").val(data.answer);
-            $("#difficulty").val(data.difficulty).select2({width: "100%", theme: 'bootstrap4'});
-            $("#optionA").val(data.optionA);
-            $("#optionB").val(data.optionB);
-            $("#optionC").val(data.optionC);
-            $("#optionD").val(data.optionD);
-            $("#remark").val(data.remark);
-            $("#id").val(data.id);
-            $("#typeId").val(data.type.id).select2({width: "100%", theme: 'bootstrap4'});
-            $("#courseName").val(data.course.courseName);
-        });
-
-        // 打开模态框
-        $("#update-modal").modal({
-            show: true,
-            backdrop: 'static'
-        });
-    }
-
-    // 试题类型下拉框信息
-    $.get("/api/type", function (data) {
-        let options = "";
-        //回填的二级类别值
-        $('.typeSelect').empty();
-        options += "<option value=''>选择题型</option>";
-        $.each(data, function (index, e) {
-            options += "<option value=" + e.id + ">" + e.typeName + "</option>";
-        });
-        $(".typeSelect").append(options).val('').select2({theme: 'bootstrap4', width: "250px"});
+  // 试题类型下拉框信息
+  $.get("/api/type", function (data) {
+    let options = "";
+    //回填的二级类别值
+    $('.typeSelect').empty();
+    options += "<option value=''>选择题型</option>";
+    $.each(data, function (index, e) {
+      options += "<option value=" + e.id + ">" + e.typeName + "</option>";
     });
+    $(".typeSelect").append(options).val('').select2({theme: 'bootstrap4', width: "250px"});
+  });
 
-    // 教师课程下拉框信息
-    $.get("/api/course/teacher/" + "${session.teacher.id}", function (data) {
-        let options = "";
-        //回填的二级类别值
-        $('.courseSelect').empty();
-        options += "<option value=''>选择课程</option>";
-        $.each(data, function (index, e) {
-            options += "<option value=" + e.id + ">" + e.courseName + "</option>";
-        });
-        $(".courseSelect").append(options).val('').select2({theme: 'bootstrap4', width: "250px"});
+  // 教师课程下拉框信息
+  $.get("/api/course/teacher/" + "${session.teacher.id}", function (data) {
+    let options = "";
+    //回填的二级类别值
+    $('.courseSelect').empty();
+    options += "<option value=''>选择课程</option>";
+    $.each(data, function (index, e) {
+      options += "<option value=" + e.id + ">" + e.courseName + "</option>";
     });
+    $(".courseSelect").append(options).val('').select2({theme: 'bootstrap4', width: "250px"});
+  });
 
-    // 启动新增模态框
-    $(".goSave").click(function () {
-        $(".difficulty").select2({theme: 'bootstrap4', width: "100%"});
-        $("#save-course").select2({theme: 'bootstrap4', width: "100%"});
-        $("#save-type").select2({theme: 'bootstrap4', width: "100%"});
-        $("#save-modal").modal({
-            show: true,
-            backdrop: 'static'
-        });
+  // 启动新增模态框
+  $(".goSave").click(function () {
+    $(".difficulty").select2({theme: 'bootstrap4', width: "100%"});
+    $("#save-course").select2({theme: 'bootstrap4', width: "100%"});
+    $("#save-type").select2({theme: 'bootstrap4', width: "100%"});
+    $("#save-modal").modal({
+      show: true,
+      backdrop: 'static'
     });
+  });
 
-    // 更新题目
-    function updateQuestion() {
-        OesUtil.confirm("确定更新题目吗?", function () {
-            let data = $("#update-form").serialize();
-            $.post("/api/question/update", data, function (data) {
-                if (data.state === "success") {
-                    OesUtil.closeModal("#update-modal");
-                    $('#update-form')[0].reset();
-                    OesUtil.refreshTable("#questionInfo");
-                } else {
-                    toastr.error(data.message);
-                }
-            })
-        })
-    }
+  // 更新题目
+  function updateQuestion() {
+    OesUtil.confirm("确定更新题目吗?", function () {
+      let data = $("#update-form").serialize();
+      $.post("/api/question/update", data, function (data) {
+        if (data.state === "success") {
+          OesUtil.closeModal("#update-modal");
+          $('#update-form')[0].reset();
+          OesUtil.refreshTable("#questionInfo");
+        } else {
+          toastr.error(data.message);
+        }
+      })
+    })
+  }
 
-    // 新增题目
-    function saveQuestion() {
-        OesUtil.confirm("确定新增题目吗?", function () {
-            let data = $("#save-form").serialize();
-            $.post("/api/question/save", data, function (data) {
-                if (data.state === "success") {
-                    OesUtil.closeModal("#save-modal");
-                    $('#save-form')[0].reset();
-                    OesUtil.refreshTable("#questionInfo");
-                } else {
-                    toastr.error(data.message);
-                }
-            })
-        })
-    }
+  // 新增题目
+  function saveQuestion() {
+    OesUtil.confirm("确定新增题目吗?", function () {
+      let data = $("#save-form").serialize();
+      $.post("/api/question/save", data, function (data) {
+        if (data.state === "success") {
+          OesUtil.closeModal("#save-modal");
+          $('#save-form')[0].reset();
+          OesUtil.refreshTable("#questionInfo");
+        } else {
+          toastr.error(data.message);
+        }
+      })
+    })
+  }
 
-    // 删除题目
-    function deleteQuestion(id) {
-        OesUtil.confirm("确定要删除么？", function () {
-            $.post("/api/question/delete/" + id, function (data) {
-                if (data.state === "success") {
-                    OesUtil.refreshTable("#questionInfo");
-                } else {
-                    toastr.error(data.message);
-                }
-            })
-        });
-    }
-
-    // 启动导入试题模态框
-    $("#importBtn").click(function () {
-        $("#importModal").modal({
-            show: true,
-            backdrop: 'static'
-        });
+  // 删除题目
+  function deleteQuestion(id) {
+    OesUtil.confirm("确定要删除么？", function () {
+      $.post("/api/question/delete/" + id, function (data) {
+        if (data.state === "success") {
+          OesUtil.refreshTable("#questionInfo");
+        } else {
+          toastr.error(data.message);
+        }
+      })
     });
+  }
 
-    // 自动上传
-    $('body').on('change', '#upload', function () {
-        let formData = new FormData();
-        let files = $($(this))[0].files[0];
-        formData.append("file", files);
-        toastr.info('正在提交中....');
-        $.ajax({
-            url: '/api/question/import',
-            type: 'POST',
-            data: formData,
-            processData: false,
-            contentType: false,
-            success: function (res) {
-                if (res.state === "success") {
-                    toastr.success('题目解析成功，完成导入');
-                    $(this).delay(800).queue(function () {
-                        OesUtil.closeModal("#importModal");
-                        $('#importPaper')[0].reset();
-                        OesUtil.refreshTable("#questionInfo");
-                    })
-                } else {
-                    toastr.error(res.message);
-                }
-            }
-        });
+  // 启动导入试题模态框
+  $("#importBtn").click(function () {
+    $("#importModal").modal({
+      show: true,
+      backdrop: 'static'
     });
+  });
+
+  // 自动上传
+  $('body').on('change', '#upload', function () {
+    let formData = new FormData();
+    let files = $($(this))[0].files[0];
+    formData.append("file", files);
+    toastr.info('正在提交中....');
+    $.ajax({
+      url: '/api/question/import',
+      type: 'POST',
+      data: formData,
+      processData: false,
+      contentType: false,
+      success: function (res) {
+        if (res.state === "success") {
+          toastr.success('题目解析成功，完成导入');
+          $(this).delay(800).queue(function () {
+            OesUtil.closeModal("#importModal");
+            $('#importPaper')[0].reset();
+            OesUtil.refreshTable("#questionInfo");
+          })
+        } else {
+          toastr.error(res.message);
+        }
+      }
+    });
+  });
 </script>
