--- a/oes-core/src/main/resources/templates/teacher/question/view-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/question/view-modal.html
@@ -12,6 +12,10 @@
                 <div class="form-group">
                     <form>
                         <div class="form-group">
+                            <label>题目ID / 编号 </label>
+                            <textarea class="form-control id" readonly="readonly" rows="1"></textarea>
+                        </div>
+                        <div class="form-group">
                             <label>名称 </label>
                             <textarea class="form-control questionName" readonly="readonly" rows="2"></textarea>
                         </div>
