--- a/oes-core/src/main/resources/templates/teacher/student/update-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/student/update-modal.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="form-group form_datetime">
                         <label for="sex">性别</label>
-                        <select id="sex" class="form-control sex" style="width: 100%">
+                        <select id="sex" name="sex" class="form-control sex" style="width: 100%">
                             <option value="男">男</option>
                             <option value="女">女</option>
                         </select>
