pref: 更新教师端和管理端的功能分配

--- a/oes-core/src/main/resources/templates/admin/include/sider.html
+++ b/oes-core/src/main/resources/templates/admin/include/sider.html
@@ -43,7 +43,7 @@
 
         <!-- 学院管理 -->
         <li class="nav-item">
-          <a href="javascript:;" id="academy" class="nav-link ${name == 'academy'?'active':''}">
+          <a href="javascript:" id="academy" class="nav-link ${name == 'academy'?'active':''}">
             <i class="nav-icon fas fa-landmark"></i>
             <p>学院管理</p>
           </a>
@@ -54,6 +54,30 @@
           <a href="javascript:;" id="teacher" class="nav-link ${name == 'teacher'?'active':''}">
             <i class="nav-icon fas fa-id-badge"></i>
             <p>教师管理</p>
+          </a>
+        </li>
+
+        <!-- 学生管理 -->
+        <li class="nav-item">
+          <a href="javascript:" id="student" class="nav-link  ${name == 'student'?'active':''}">
+            <i class="nav-icon fas fa-users"></i>
+            <p>学生管理</p>
+          </a>
+        </li>
+
+        <!-- 课程管理 -->
+        <li class="nav-item">
+          <a href="javascript:;" id="course" class="nav-link  ${name == 'course'?'active':''}">
+            <i class="nav-icon fas fa-cube"></i>
+            <p>课程管理</p>
+          </a>
+        </li>
+
+        <!-- 专业管理 -->
+        <li class="nav-item">
+          <a href="javascript:;" id="major" class="nav-link  ${name == 'major'?'active':''}">
+            <i class="nav-icon fas fa-feather-alt"></i>
+            <p>专业管理</p>
           </a>
         </li>
 
