--- a/oes-core/src/main/resources/templates/admin/main/api.html
+++ b/oes-core/src/main/resources/templates/admin/main/api.html
@@ -6,11 +6,20 @@
   $("#announce").click(function () {
     OesUtil.ajaxPage("#announce", "/admin/announce");
   });
+  $("#course").click(function () {
+    OesUtil.ajaxPage("#course", "/admin/course");
+  });
   $("#admin").click(function () {
     OesUtil.ajaxPage("#admin", "/admin");
   });
   $("#teacher").click(function () {
     OesUtil.ajaxPage("#teacher", "/admin/teacher");
+  });
+  $("#student").click(function () {
+    OesUtil.ajaxPage("#student", "/admin/student");
+  });
+  $("#major").click(function () {
+    OesUtil.ajaxPage("#major", "/admin/major");
   });
   $("#academy").click(function () {
     OesUtil.ajaxPage("#academy", "/admin/academy");
