--- a/oes-core/src/main/resources/templates/teacher/include/sider.html
+++ b/oes-core/src/main/resources/templates/teacher/include/sider.html
@@ -46,29 +46,13 @@
         <li class="nav-item">
           <a href="javascript:;" id="course" class="nav-link  ${name == 'course'?'active':''}">
             <i class="nav-icon fas fa-cube"></i>
-            <p>课程管理</p>
-          </a>
-        </li>
-
-        <!-- 专业管理 -->
-        <li class="nav-item">
-          <a href="javascript:;" id="major" class="nav-link  ${name == 'major'?'active':''}">
-            <i class="nav-icon fas fa-feather-alt"></i>
-            <p>专业管理</p>
-          </a>
-        </li>
-
-        <!-- 学生管理 -->
-        <li class="nav-item">
-          <a href="javascript:;" id="student" class="nav-link  ${name == 'student'?'active':''}">
-            <i class="nav-icon fas fa-users"></i>
-            <p>学生管理</p>
+            <p>我的课程</p>
           </a>
         </li>
 
         <!-- 试题管理 -->
         <li class="nav-item">
-          <a href="javascript:;" id="question" class="nav-link  ${name == 'question'?'active':''}">
+          <a href="javascript:" id="question" class="nav-link  ${name == 'question'?'active':''}">
             <i class="nav-icon fas fa-question-circle"></i>
             <p>试题管理</p>
           </a>
@@ -76,7 +60,7 @@
 
         <!-- 试卷管理 -->
         <li class="nav-item">
-          <a href="javascript:;" id="paper"
+          <a href="javascript:" id="paper"
              class="nav-link  ${strutil.contain(name,'paper')?'active':''}">
             <i class="nav-icon fas fa-file-alt"></i>
             <p>试卷管理</p>
@@ -84,17 +68,17 @@
         </li>
 
         <!-- 考试管理 -->
-        <li class="nav-item">
-          <a href="javascript:;" id="exam"
-             class="nav-link  ${strutil.contain(name,'exam')?'active':''}">
-            <i class="nav-icon fas fa-clock"></i>
-            <p>考试管理</p>
-          </a>
-        </li>
+<!--        <li class="nav-item">-->
+        <!--          <a href="javascript:" id="exam"-->
+        <!--             class="nav-link  ${strutil.contain(name,'exam')?'active':''}">-->
+        <!--            <i class="nav-icon fas fa-clock"></i>-->
+        <!--            <p>考试管理</p>-->
+        <!--          </a>-->
+        <!--        </li>-->
 
         <!-- 试卷复查 -->
         <li class="nav-item">
-          <a href="javascript:;" id="review"
+          <a href="javascript:" id="review"
              class="nav-link ${strutil.contain(name,'review')?'active':''}">
             <i class="nav-icon fas fa-clipboard-check"></i>
             <p>试卷复查</p>
@@ -103,7 +87,7 @@
 
         <!-- 帮助中心 -->
         <li class="nav-item">
-          <a href="javascript:;" id="help" class="nav-link  ${name == 'help'?'active':''}">
+          <a href="javascript:" id="help" class="nav-link  ${name == 'help'?'active':''}">
             <i class="nav-icon fas fa-user-circle"></i>
             <p>帮助中心</p>
           </a>
