--- a/oes-core/src/main/resources/templates/admin/course/list.html
+++ b/oes-core/src/main/resources/templates/admin/course/list.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>OES | 教师端</title>
+  <title>OES | 课程列表</title>
   <!-- 引入全局 css 文件 -->
   <%include("../../include/css.html"){} %>
 </head>
@@ -12,24 +12,25 @@
   <!-- 引入头部 -->
   <% include("../include/header.html"){} %>
   <!-- 左侧菜单栏 -->
-  <% layout("../include/sider.html",{name:"major"}){} %>
+  <% layout("../include/sider.html",{name:"course"}){} %>
   <!-- 引入全局 js 脚本文件 -->
   <% include("../../include/js.html"){} %>
   <!-- 右侧内容部分 -->
+  <!-- 右侧内容部分 -->
   <div class="content-wrapper">
     <%
-    #ajax majorTable:{
+    #ajax courseTable:{
     %>
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>专业管理</h1>
+            <h1>课程管理</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="/teacher/major">专业管理</a></li>
+              <li class="breadcrumb-item"><a href="/admin/course">课程管理</a></li>
             </ol>
           </div>
         </div>
@@ -43,36 +44,19 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title">专业管理</h3>
+                <h3 class="card-title">课程内容</h3>
                 <div class="card-tools">
                   <div class="input-group input-group-sm">
-                    <button onclick="goSave()" class="btn btn-default btn-sm">&nbsp;新增专业</button>&nbsp;
+                    <button id="goSave" class="btn btn-default btn-sm">新增课程</button>&nbsp;
                     <button class="btn btn-default btn-sm"
-                            onclick="OesUtil.refreshTable('#majorInfo');">刷新数据
+                            onclick="OesUtil.refreshTable('#courseInfo');">刷新数据
                     </button>
                   </div>
                 </div>
               </div>
-
-              <!-- 条件查询框 -->
-              <div class="card-header">
-                <div class="card-tools">
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <select class="form-control academySelect"
-                              name="findAcademy" id="findAcademy"></select>
-                    </div>
-                    <div class="col-sm-6">
-                      <input id="findMajor" class="form-control "
-                             style="width: 200px" placeholder="专业名称">
-                    </div>
-                  </div>
-                </div>
-              </div>
-
               <!-- /.card-header -->
               <div class="card-body">
-                <table id="majorInfo"
+                <table id="courseInfo"
                        class="table table-bordered table-striped text-nowrap"></table>
               </div>
               <!-- /.card-body -->
@@ -82,12 +66,12 @@
         </div><!-- /.row -->
       </div>
     </section>
-    <!-- 接口 -->
-    <%include("api.html"){}%>
     <!-- 新增课程模态框 -->
     <% include("save-modal.html"){} %>
-    <!-- 更新模态框 -->
+    <!-- 更新课程 -->
     <% include("update-modal.html"){} %>
+    <!-- 接口 -->
+    <% include("api.html"){} %>
     <%}%>
   </div>
   <aside class="control-sidebar control-sidebar-dark">
