--- a/oes-core/src/main/resources/templates/admin/major/list.html
+++ b/oes-core/src/main/resources/templates/admin/major/list.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>OES | 教师端</title>
+  <title>OES | 管理员端</title>
   <!-- 引入全局 css 文件 -->
   <%include("../../include/css.html"){} %>
 </head>
@@ -12,24 +12,24 @@
   <!-- 引入头部 -->
   <% include("../include/header.html"){} %>
   <!-- 左侧菜单栏 -->
-  <% layout("../include/sider.html",{name:"student"}){} %>
+  <% layout("../include/sider.html",{name:"major"}){} %>
   <!-- 引入全局 js 脚本文件 -->
   <% include("../../include/js.html"){} %>
   <!-- 右侧内容部分 -->
   <div class="content-wrapper">
     <%
-    #ajax studentTable:{
+    #ajax majorTable:{
     %>
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>学生管理</h1>
+            <h1>专业管理</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="/teacher/student">学生管理</a></li>
+              <li class="breadcrumb-item"><a href="/admin/major">专业管理</a></li>
             </ol>
           </div>
         </div>
@@ -43,13 +43,12 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title">学生信息</h3>
+                <h3 class="card-title">专业管理</h3>
                 <div class="card-tools">
                   <div class="input-group input-group-sm">
-                    <button onclick="goSave()" class="btn btn-default btn-sm float-right">新增学生
-                    </button>&nbsp;
+                    <button onclick="goSave()" class="btn btn-default btn-sm">&nbsp;新增专业</button>&nbsp;
                     <button class="btn btn-default btn-sm"
-                            onclick="OesUtil.refreshTable('#studentInfo');">刷新数据
+                            onclick="OesUtil.refreshTable('#majorInfo');">刷新数据
                     </button>
                   </div>
                 </div>
@@ -64,8 +63,8 @@
                               name="findAcademy" id="findAcademy"></select>
                     </div>
                     <div class="col-sm-6">
-                      <input id="findKey" class="form-control "
-                             style="width: 200px" placeholder="姓名或学号">
+                      <input id="findMajor" class="form-control "
+                             style="width: 200px" placeholder="专业名称">
                     </div>
                   </div>
                 </div>
@@ -73,10 +72,9 @@
 
               <!-- /.card-header -->
               <div class="card-body">
-                <table id="studentInfo"
+                <table id="majorInfo"
                        class="table table-bordered table-striped text-nowrap"></table>
               </div>
-
               <!-- /.card-body -->
             </div>
             <!-- /.card -->
@@ -84,12 +82,12 @@
         </div><!-- /.row -->
       </div>
     </section>
-    <!-- 增加模态框 -->
-    <%include("save-modal.html"){}%>
-    <!-- 更新模态框 -->
-    <%include("update-modal.html"){}%>
     <!-- 接口 -->
-    <% include("api.html"){} %>
+    <%include("api.html"){}%>
+    <!-- 新增课程模态框 -->
+    <% include("save-modal.html"){} %>
+    <!-- 更新模态框 -->
+    <% include("update-modal.html"){} %>
     <%}%>
   </div>
   <aside class="control-sidebar control-sidebar-dark">
@@ -102,5 +100,3 @@
 </div>
 </body>
 </html>
-
-
