--- a/oes-core/src/main/resources/templates/admin/student/update-modal.html
+++ b/oes-core/src/main/resources/templates/admin/student/update-modal.html
@@ -26,8 +26,8 @@
                    id="stuNumber" readonly="readonly">
           </div>
           <div class="form-group form_datetime">
-            <label for="academy">学院</label>
-            <select id="academy" name="academy" class="form-control academySelect"
+            <label for="academyId">学院</label>
+            <select id="academyId" name="academy" class="form-control academySelect"
                     style="width: 100%"
                     onchange="getMajor(this.value,null)">
               <!-- 填入数据 -->
